[gd_scene load_steps=5 format=3 uid="uid://n4jgo8ducj5y"]

[ext_resource type="Script" path="res://scripts/components/melee_attack/melee_attack_component.gd" id="1_sxpxg"]
[ext_resource type="PackedScene" uid="uid://cumblegcognst" path="res://scripts/components/damage_deal/single_entity_damage/single_damage_component.tscn" id="2_lvpr8"]
[ext_resource type="PackedScene" uid="uid://dkq7f5mbkd78b" path="res://scripts/components/aiming/entity_aiming_component/entity_aiming_component.tscn" id="3_rures"]
[ext_resource type="PackedScene" uid="uid://bli7k15t8yntj" path="res://scripts/components/effect_holder_component/effect_hold_component.tscn" id="4_g6ehb"]

[node name="MeleeAttackComponent" type="Node2D" node_paths=PackedStringArray("damage_deal_component", "aiming_component")]
script = ExtResource("1_sxpxg")
attack_range_px = 200.0
damage_amount = 1
damage_deal_component = NodePath("DamageDealComponent")
aiming_component = NodePath("EntityAimingComponent")

[node name="DamageDealComponent" parent="." instance=ExtResource("2_lvpr8")]

[node name="EntityAimingComponent" parent="." instance=ExtResource("3_rures")]
enemy_group = "buildings"

[node name="EffectHoldComponent" parent="." node_paths=PackedStringArray("effect_hold_component") instance=ExtResource("4_g6ehb")]
effect_hold_component = NodePath(".")

[connection signal="target_changed" from="EntityAimingComponent" to="." method="_on_entity_aiming_component_target_changed"]
